tests/simple
TEST simple: one rule
firewally
accept
EOF
*filter
:FORWARD -
:INPUT -
:OUTPUT -
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: FORWARD DROP: " --log-level notice
-A FORWARD -j DROP
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j ACCEPT
-A INPUT -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: INPUT DROP: " --log-level notice
-A INPUT -j DROP
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
TEST simple: one policy
firewally
policy accept
EOF
*filter
:FORWARD -
:INPUT -
:OUTPUT -
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: FORWARD DROP: " --log-level notice
-A FORWARD -j DROP
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
TEST simple: accept policy
firewally
chain INPUT
    policy accept
chain FORWARD
    policy accept
chain OUTPUT
    policy accept
EOF
*filter
:FORWARD -
:INPUT -
:OUTPUT -
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
TEST simple: multiple tables
firewally
chain INPUT
chain FORWARD
chain OUTPUT
chain nat PREROUTING
chain nat FORWARD
chain nat POSTROUTING
chain mangle PREROUTING
chain mangle FORWARD
chain mangle POSTROUTING
EOF
*filter
:FORWARD -
:INPUT -
:OUTPUT -
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: FORWARD DROP: " --log-level notice
-A FORWARD -j DROP
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: INPUT DROP: " --log-level notice
-A INPUT -j DROP
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
*mangle
:FORWARD -
:POSTROUTING -
:PREROUTING -
COMMIT
*nat
:FORWARD -
:POSTROUTING -
:PREROUTING -
COMMIT
TEST simple: not stateful
firewally
FIREWALLY_STATEFUL=0
EOF
*filter
:FORWARD -
:INPUT -
:OUTPUT -
-A FORWARD -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: FORWARD DROP: " --log-level notice
-A FORWARD -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: INPUT DROP: " --log-level notice
-A INPUT -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
TEST simple: not stateful, multiple tables
firewally
FIREWALLY_STATEFUL=0
chain INPUT
chain FORWARD
chain OUTPUT
chain nat PREROUTING
chain nat FORWARD
chain nat POSTROUTING
chain mangle PREROUTING
chain mangle FORWARD
chain mangle POSTROUTING
EOF
*filter
:FORWARD -
:INPUT -
:OUTPUT -
-A FORWARD -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: FORWARD DROP: " --log-level notice
-A FORWARD -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m limit --limit 1/second --limit-burst 2 -j LOG --log-prefix "FW: INPUT DROP: " --log-level notice
-A INPUT -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
*mangle
:FORWARD -
:POSTROUTING -
:PREROUTING -
COMMIT
*nat
:FORWARD -
:POSTROUTING -
:PREROUTING -
COMMIT
